# p2p

./: API.md  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
client/: CMakeLists.txt
client/cmake/: p2p-client-config.cmake.in
client/include/p2p/: export.hpp  p2p_client.hpp  types.hpp
client/src/: main.cpp  p2p_client.cpp
common/include/: protocol.hpp
server/: CMakeLists.txt
server/src/: main.cpp
